# casbin-rs

./: .gitignore  .releaserc.json  .travis.yml  .vimspector.json  CHANGELOG.md  CUSTOM_FUNCTIONS.md  Cargo.toml  Dockerfile  README.md  after  await-fut  before  block-on  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/: dependabot.yml
.github/workflows/: benchmark.yml  changelog.yml  ci.yml  coverage.yml  pull_request.yml  release.yml  rustdoc.yml
benches/: benchmark.rs  casbin.rs
casbin/: all.html  enum.EffectKind.html  enum.Event.html  enum.EventData.html  index.html  macro.get_or_err.html  macro.get_or_err_with_context.html  macro.push_index_if_explain.html  macro.register_g_function.html  sidebar-items.js  struct.Assertion.html  struct.DefaultEffectStream.html  struct.DefaultEffector.html  struct.DefaultModel.html  struct.DefaultRoleManager.html  struct.EnforceContext.html  struct.Enforcer.html  struct.FileAdapter.html  struct.Filter.html  struct.MemoryAdapter.html  struct.NullAdapter.html  struct.StringAdapter.html  trait.Adapter.html  trait.CoreApi.html  trait.Effector.html  trait.EffectorStream.html  trait.EnforceArgs.html  trait.EventEmitter.html  trait.EventKey.html  trait.IEnforcer.html  trait.InternalApi.html  trait.MgmtApi.html  trait.Model.html  trait.RbacApi.html  trait.RoleManager.html  trait.TryIntoAdapter.html  trait.TryIntoModel.html  type.MatchingFn.html  type.Result.html
casbin/adapter/string_adapter/: struct.StringAdapter.html
casbin/error/: enum.Error.html  enum.ModelError.html  enum.PolicyError.html  enum.RbacError.html  enum.RequestError.html  index.html  struct.AdapterError.html
casbin/frontend/: fn.casbin_js_get_permission_for_user.html  index.html
casbin/function_map/: enum.OperatorFunction.html  fn.dynamic_to_str.html  fn.key_get.html  fn.key_get2.html  fn.key_get3.html  fn.key_match.html  fn.key_match2.html  fn.key_match3.html  fn.key_match4.html  fn.key_match5.html  fn.regex_match.html  index.html  sidebar-items.js  struct.FunctionMap.html
casbin/model/function_map/: fn.dynamic_to_str.html  fn.key_match4.html  fn.key_match5.html
casbin/prelude/: index.html
casbin/rhai/: attr.export_fn.html  attr.export_module.html  attr.expose_under_internals.html  constant.FUNC_TO_DEBUG.html  constant.FUNC_TO_STRING.html  constant.OP_CONTAINS.html  constant.OP_EQUALS.html  derive.CustomType.html  enum.EvalAltResult.html  enum.FnAccess.html  enum.FnNamespace.html  enum.LexError.html  enum.ParseErrorType.html  fn.eval.html  fn.eval_file.html  fn.format_map_as_json.html  fn.run.html  fn.run_file.html  index.html  macro.combine_with_exported_module.html  macro.def_package.html  macro.exported_module.html  macro.register_exported_fn.html  macro.set_exported_fn.html  macro.set_exported_global_fn.html  struct.AST.html  struct.Dynamic.html  struct.Engine.html  struct.EvalContext.html  struct.Expression.html  struct.FnPtr.html  struct.FuncRegistration.html  struct.ImmutableString.html  struct.Instant.html  struct.Locked.html  struct.Module.html  struct.NativeCallContext.html  struct.ParseError.html  struct.Position.html  struct.Scope.html  (+10 more)
casbin/rhai/config/: index.html
casbin/rhai/plugin/: attr.export_fn.html  attr.export_module.html  attr.expose_under_internals.html  derive.CustomType.html  enum.EvalAltResult.html  enum.FnAccess.html  enum.FnNamespace.html  enum.RhaiFunc.html  index.html  struct.Dynamic.html  (+14 more)
examples/: basic_with_root_model.conf  keymatch_policy.csv  multi_section.rs  multi_section_model.conf  multi_section_policy.csv  rbac_basic_role_model.conf  rbac_basic_role_policy.csv  rbac_model_matcher_using_in_op.conf  rbac_policy.csv  rbac_with_domains_policy.csv  rbac_with_pattern_domain_model.conf  rbac_with_pattern_domain_policy.csv  rbac_with_pattern_policy.csv  testini.ini
search.desc/casbin/: casbin-desc-0-.js
search.index/: 009a01530fc8.js  00f7ec5ed078.js  011206f44ca9.js  013d68f6c744.js  0174680f9f21.js  01c137d97c07.js  01d33afeb03a.js  02c8377390fd.js  02d5717aed2c.js  0338fa29b72c.js  03a11634b0f7.js  03a949d37a14.js  046788847615.js  048642fc90fa.js  059e383216e4.js  060032ea2d82.js  07c6f2d540ce.js  07dde77abee5.js  07f2a2ad6e95.js  08425953bbd1.js  0880aea4bdc5.js  08c7f57f5ebc.js  0941dd17e452.js  09a5a027fcc9.js  09b7f35d7929.js  0a069ef20a69.js  0ae29b82923e.js  0b9c82c07de6.js  0ba957c01fda.js  0bab16394128.js  0c35e89c15ff.js  0c678cfe9984.js  0cc3406e7f53.js  0deac2faae41.js  0e435c0d68ce.js  0e4f74a5fc2c.js  0e588c2cabea.js  0ea8d88cc596.js  0ed3a5e87e37.js  0eed88664087.js  (+355 more)
search.index/alias/: 3f8710b0e3d4.js  66d17b2aee19.js
search.index/crateNames/: d48f610a8482.js
search.index/desc/: a78c75f919e0.js  e632c47da799.js
search.index/entry/: a7ea2e4be268.js  ba132526ea60.js
search.index/function/: 24450238a6c1.js  f43d40249a8d.js
search.index/generic_inverted_index/: 543a62ec0185.js  ea42d2aad8f5.js
search.index/name/: 154855201ad4.js  a000643449f2.js
search.index/normalizedName/: 334a1bca9478.js  86962d3b7d49.js
search.index/path/: c78c818823dd.js
search.index/type/: 0d0f4e9600c6.js  f15c619da733.js
src/: adapter.rs  cached_api.rs  cached_enforcer.rs  config.rs  convert.rs  core_api.rs  effector.rs  emitter.rs  enforcer.rs  enforcer_api.rs  error.rs  errors.rs  frontend.rs  internal_api.rs  lib.rs  macros.rs  management_api.rs  model.rs  prelude.rs  rbac.rs  rbac_api.rs  runtime.rs  synced_enforcer.rs  util.rs  watcher.rs
src/adapter/: file_adapter.rs  memory_adapter.rs  mod.rs  null_adapter.rs  string_adapater.rs  string_adapter.rs
src/cache/: default_cache.rs  mod.rs
src/casbin/: config.rs.html  convert.rs.html  core_api.rs.html  effector.rs.html  emitter.rs.html  enforcer.rs.html  error.rs.html  frontend.rs.html  internal_api.rs.html  lib.rs.html  macros.rs.html  management_api.rs.html  prelude.rs.html  rbac_api.rs.html  util.rs.html
src/ffi/: c.h  c.rs
src/logger/: default_logger.rs  mod.rs
src/model/: assertion.rs  default_model.rs  function_map.rs  mod.rs
src/rbac/: default_role_manager.rs  mod.rs  role_manager.rs
type.impl/std/: primitive.i32.js
(+77 files in other folders)
