[package]
authors     = ["Joey <joey.xf@gmail.com>", "Cheng JIANG <jiang.cheng@vip.163.com>"]
description = "An authorization library that supports access control models like ACL, RBAC, ABAC."
edition     = "2018"
homepage    = "https://casbin.org/"
keywords    = ["auth", "authorization", "rbac", "acl", "abac"]
license     = "Apache-2.0"
name        = "casbin"
readme      = "README.md"
repository  = "https://github.com/casbin/casbin-rs"
version     = "2.0.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std   = { version = "1.9.0", optional = true }
async-trait = "0.1.48"
globset     = { version = "0.4.6", optional = true }
indexmap    = "1.6.2"
ip_network  = { version = "0.3.4", optional = true }
lazy_static = "1.4.0"
lru         = { version = "0.6.5", optional = true }
parking_lot = "0.11"
regex       = "1.4.5"
rhai        = { version = "0.20.0", features = [
    "sync",
    "only_i32",
    "no_function",
    "no_float",
    "no_optimize",
    "no_module",
    "serde",
    "unchecked",
] }
serde       = "1.0.125"
slog        = { version = "2.7.0", optional = true }
slog-async  = { version = "2.6.0", optional = true }
slog-term   = { version = "2.8.0", optional = true }
thiserror   = "1.0.24"
tokio       = { version = "1.5.0", optional = true, default-features = false }
tokio-stream = { version = "0.1", optional = true, default-features = false }

[features]
default = ["runtime-tokio", "incremental"]

cached            = ["lru"]
explain           = []
glob              = ["globset"]
incremental       = []
ip                = ["ip_network"]
logging           = ["slog", "slog-term", "slog-async"]
runtime-async-std = ["async-std"]
runtime-tokio     = ["tokio/fs", "tokio/io-util"]
watcher           = []

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
serde     = { version = "1.0.125", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
serde     = { version = "1.0.125", features = ["derive"] }
tokio     = { version = "1.5.0", features = ["full"] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.dev]
split-debuginfo = "unpacked"

[profile.bench]
lto       = true
opt-level = 3

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[lib]
bench = false
